[general]
short_name = Wikimedia
update = true
min_update_delay = 720
debug = true
logs_dir = /home/bitergia/logs
bulk_size = 5000
scroll_size = 5000
aliases_file = /home/bitergia/conf/aliases.json

[projects]
projects_file = /home/bitergia/conf/projects.json

[es_collection]
url = http://elasticsearch:9200

[es_enrichment]
url = http://elasticsearch:9200
autorefresh = true

[sortinghat]
host = mariadb
user = root
password =
database = wikimedia_tfm_sh_sub
load_orgs = false
orgs_file = /home/bitergia/conf/organizations.json
autoprofile = [github, git]
matching = [email]
sleep_for = 720
unaffiliated_group = Unknown
affiliate = false
strict_mapping = false
reset_on_load = false
identities_file = [/home/bitergia/conf/identities.yml]
identities_format = grimoirelab

[panels]
kibiter_time_from = now-5y
kibiter_default_index = git
kibiter_url = http://kibiter:5601
kibiter_version = 6.8.6-3
gitlab-issues = false
gitlab-merges = false

[phases]
collection = true
identities = false
enrichment = false
panels = false

[git]
raw_index = git_raw_210914
enriched_index = git_raw_210914_enriched_210914
latest-items = false
no-archive = true
studies = []
